--- a/ansible/roles/elasticsearch/tasks/main.yml
+++ b/ansible/roles/elasticsearch/tasks/main.yml
@@ -38,6 +38,7 @@
   tags:
     - install
     - upgrade
+  ignore_errors: true
 
 - name: Run docker elasticsearch container
   docker:
@@ -58,3 +59,4 @@
   tags:
     - install
     - upgrade
+  ignore_errors: true
